--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0",
     "sequelize-cli": "^6.5.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.29.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
