--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "fastest-validator": "^1.15.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0",
     "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
     "eslint": "^8.29.0",
-    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^4.9.3"
   }
 }
